--- a/About-us.html
+++ b/About-us.html
@@ -247,7 +247,7 @@
             </div>
           </section>
           <section class=copy-social>
-            <div class=copyright> &copy; © 2019  Bespoke by design / All Rights Reserved.</div>
+            <div class=copyright> &copy; 2019  Bespoke by design / All Rights Reserved.</div>
             <div class=social>
               <ul>
                 <li> <a href=''> TW </a> </li>
