--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link href='images/favicons/site.webmanifest' rel=manifest>
 
     <meta content='#ffffff' name=theme-color>
-    <title>Bespoke | Services</title>
+    <title>Bespoke</title>
     <link href="stylesheets/all.css" rel=stylesheet />
     <script src="javascripts/site.js"></script>
 </head>
